--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
+    android:background="#FFC107"
     tools:context=".onBoard.IntroActivity">
 
 
@@ -28,5 +30,40 @@
         app:tabMaxWidth="15dp"
         android:layout_marginBottom="50dp"
         app:tabGravity="center" />
+
+    <Button
+
+          android:onClick="skip"
+        android:id="@+id/btn_skip"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#FFEB3B"
+        android:visibility="gone"
+        android:layout_alignParentRight="true"
+        android:text="skip" />
+
+
+    <Button
+            android:onClick="next"
+        android:id="@+id/next"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="next"
+        android:background="#9E1515"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="485dp"
+
+        />
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/animation_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/begiiner"/>
+
+
+
+
 
 </RelativeLayout>
